reverse geocoding and no image upload fix
